framec_tests/language_specific/cpp/v3_facade_smoke/negative/strict_unfinished_template.frm
@target cpp

system S {
    machine:
        $A {
            e() {
                -> $B();
                std::vector<int x; // missing closing '>'
            }
        }
        $B {
        }
}

